	Added context menu to merge conflict dialog
	Added "Abort" button to merge conflict dialog
	Most dialogs changed to support larger DPI settings.
	Delete commit message after succesful commit.
	Added waitcursor to FormResolveConflicts.
	Set width to submodules submenu and recent repositories submenu.
	Added F3 and Shift+F3 to code dialog.

Version 1.78
	Fixed bug causing the commitmessage to contain encoding marker bytes
	Fixed bug preventing the bash to show
	Recent repository list is updated when opening submodule or loading from Visual Studio
	File history fixed for deleted files

Version 1.77
	Fixed bug in version 1.76 that file history was broken when started from Visual Studio
	Commit message now supports multiline (first line is the summary)
	Revision grid resizes graph column automatically. 
	Settings user.name and user.email are only saved when changed. This to work around a bug that utf8 chars are only allowed when editing the .config file manually. 
	Recent repository list handles doubles better.
	
Version 1.76
	Fixed ut8 national chars conversion
	Added setting to ignore directories from statistics	
	Added syntax and find to blame view
	Toolbar in Visual Studio learned to remember the last position
	
Version 1.74
	Diff syntax highlighting improved
	Various small bug fixes
	Added statistics plugin
	
Version 1.73
	All dialogs can be closed with the ESC key
	Modal dialogs are not resizable anymore
	Added context menu on revision file tree (Save As, Open, Open With)
	When selection a revision, the file tree remembers the last selected file
	Fixed crash when starting from command line with invalid path
	Added tooltips to startpage
	"Auto compile submodules" plugin can be started from menu even when disabled
	
Version 1.72
	Fixed bug in "Auto compile submodules" plugin
	Added progress dialgo to "Check for updates" plugin

Version 1.71
	Added support for plugin
	Added "Check for updates" plugin
	Added "Auto compile submodules" plugin
	Improved start page